--- a/css/style.css
+++ b/css/style.css
@@ -348,7 +348,7 @@ button {
      padding-bottom: 50px;
      text-transform: uppercase;
      font-weight: 600;
-     text-align: left;
+     text-align: centre;
 }
 
 .text-bg a {
